samples/_failures_safe/1761088333_ceb899_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3d1a947.c: In function ‘main’:
./samples/SAFE/__tmp_a3d1a947.c:158:17: error: expected declaration or statement at end of input
  158 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_a3d1a947.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3d1a947.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3d1a947.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3d1a947.c:158:17: error: expected declaration or statement at end of input
